@@ -17,41 +17,49 @@
 package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.GetItemInventoryTypesForm;
-import com.echothree.control.user.item.common.result.GetItemInventoryTypesResult;
 import com.echothree.control.user.item.common.result.ItemResultFactory;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.data.item.server.entity.ItemInventoryType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetItemInventoryTypesCommand
-        extends BaseSimpleCommand<GetItemInventoryTypesForm> {
-    
+        extends BaseMultipleEntitiesCommand<ItemInventoryType, GetItemInventoryTypesForm> {
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of(
+        );
     }
-    
+
     /** Creates a new instance of GetItemInventoryTypesCommand */
     public GetItemInventoryTypesCommand(UserVisitPK userVisitPK, GetItemInventoryTypesForm form) {
         super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<ItemInventoryType> getEntities() {
         var itemControl = Session.getModelController(ItemControl.class);
-        GetItemInventoryTypesResult result = ItemResultFactory.getGetItemInventoryTypesResult();
-        
-        result.setItemInventoryTypes(itemControl.getItemInventoryTypeTransfers(getUserVisit()));
-        
+
+        return itemControl.getItemInventoryTypes();
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<ItemInventoryType> entities) {
+        var result = ItemResultFactory.getGetItemInventoryTypesResult();
+        var itemControl = Session.getModelController(ItemControl.class);
+        var userVisit = getUserVisit();
+
+        result.setItemInventoryTypes(itemControl.getItemInventoryTypeTransfers(userVisit, entities));
+
         return result;
     }
-    
+
 }
